--- a/colab.ipynb
+++ b/colab.ipynb
@@ -20,11 +20,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Welcome to Tortoise! 🐢🐢🐢🐢\n",
+        "Welcome\n",
         "\n",
         "Before you begin, I **strongly** recommend you turn on a GPU runtime.\n",
         "\n",
-        "There's a reason this is called \"Tortoise\" - this model takes up to a minute to perform inference for a single sentence on a GPU. Expect waits on the order of hours on a CPU."
+        
       ],
       "metadata": {
         "id": "_pIZ3ZXNp7cf"
